v1.1 - Pending
	+ Allow searching ALL metadata in library ("everything")
	+ GNOME session support
	+ Add "shuffle" and "repeat" commandline arguments
	+ Show if mpd is updating in statusbar
	+ Save last used option in library search
	+ Fixes to prevent problems between withdrawing app & gtk.StatusIcon
	+ Update code for dbus-python 0.80 API (Jordan)
	+ Bug: Fix error if mpd is not running and sonata starts hidden

v1.0.1 - February 13, 2007
	+ Make lyrics fetching optional
	+ Allow editing of stream name/url
	+ Hide the notification window when it is clicked
	+ Small usability improvements to gtk.StatusIcon
	+ Improvements to reordering the current playlist with drag-n-drop
	+ Bug: Info window freezes when editing currently playing song's tags
	+ Bug: Tag editing doesn't work with older version (0.90.1) of tagpy
	+ Bug: Prevent strange potential freeze with gc.collect()
	+ Bug: Cover art doesn't update correctly if Local Only artwork set
	+ Bug: Lyrics occassionally don't stay synced with current playing song

v1.0 - January 21, 2007
	+ Multiple views for library: filesystem, artists, albums
	+ Editing of song tags (requires optional taglib & tagpy)
	+ Auto-fetching of song lyrics (requires optional soappy)
	+ Improved song info window and access to it
	+ Allow pls/m3u/extm3u's as stream inputs
	+ Sort current playlist (by metadata, random, reverse)
	+ Optional statusbar (playlist length, time)
	+ Revert to gtk's StatusIcon if gnome-python-extras isn't installed
	+ Make system tray icon optional
	+ Pref to write xmms-info like status file to use with IM, IRC.. (Tim)
	+ Allow drag-n-drop of images to set album art
	+ If there is only one image in the song's dir, set as art (Ivan)
	+ Album art priority preference (local vs remove)
	+ Formatting options (genre, song length, elapsed time, year) (Ivan)
	+ Pref to play enqueued items on activate (i.e. enter/double-click)
	+ Play friendler with other clients for shuffle/repeat/crossfade